created  new architecture

--- a/src/app/components/lastPosts/lastPosts.html
+++ b/src/app/components/lastPosts/lastPosts.html
@@ -1,13 +1,13 @@
 <p>hello</p>
-<div  class="post-single" ng-repeat="p in main.posts">
+<div class="post-single" ng-repeat="p in main.lastPosts">
 
-          <h1 class="title">{{p.title}}</h1>
-          <span class="post__meta">{{p.createdAt| date: "MMMM dd, yyyy 'at' HH:mm"}}</span>
-          <div class="post__meta__divider"></div>
-          <p>{{p.text|limitTo:250}}...</p>
-          <div class="post__button">
-            <a ui-sref="post"  class="button"  ng-click="main.cons()">READ MORE</a>
-          </div>
-        </div>
+  <h1 class="title">{{p.title}}</h1>
+  <span class="post__meta">{{p.createdAt| date: "MMMM dd, yyyy 'at' HH:mm"}}</span>
+  <div class="post__meta__divider"></div>
+  <p>{{p.text|limitTo:250}}...</p>
+  <div class="post__button">
+    <a ui-sref="post" class="button" ng-click="main.cons()">READ MORE</a>
+  </div>
+</div>
 
 
