change function loginFail

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -190,7 +190,7 @@ overflow: visible;
   background-color: transparent;
   border: none;
   height: 38px!important;
-    margin:16px 32px 16px 16px;
+    margin:16px 32px 16px 16px!important;
   width: 36px!important;
 }
 
@@ -285,4 +285,12 @@ display: flex;
   border: 1px solid rgba(0,0,0,0.15);
   padding: 13px 23px 13px 26px;
   border-radius: 26px;
+}
+.form_validation_msg {
+  margin-top: 15px;
+  text-align: center;
+  border-radius: 10px;
+  line-height: 2.5em;
+  font-size: 1.3em;
+  font-style: italic;
 }
