added sign up form

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -193,6 +193,21 @@ overflow: visible;
     margin:16px 32px 16px 16px!important;
   width: 36px!important;
 }
+.sign-up {
+  background-color: transparent;
+  border: none;
+  height: 38px!important;
+  margin:16px 0 16px 16px!important;
+  width: 36px!important;
+}
+.sign-out {
+  background-color: transparent;
+  border: none;
+  height: 38px!important;
+  margin:16px 32px 16px 16px!important;
+  width: 36px!important;
+}
+
 
 
 
@@ -231,11 +246,13 @@ display: flex;
 }
 .center-side{
   flex-grow: 15;
-  width: 20%;
+  width: 80%;
   background: #fafbfb;
 }
 .right-side{
   flex-grow: 2;
+  width: 20%;
+
 }
 
 .title{
