added create post menu

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -207,10 +207,21 @@ overflow: visible;
   margin:16px 32px 16px 16px!important;
   width: 36px!important;
 }
+.create-post {
+  background-color: transparent;
+  border: none;
+  height: 38px!important;
+  margin:16px 32px 16px 16px!important;
+  //width: 36px!important;
+}
+textarea.md-input {
+  max-height: 150px;
+  overflow: auto;
+}
 
-
-
-
+.new-line{
+  white-space: pre-line!important;
+}
 md-list-item{
   height: 100%;
 }
