--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,13 +1,22 @@
-<md-toolbar layout="row" layout-align="center center">
-
-  <md-button href="https://github.com/Swiip/generator-gulp-angular">Gulp Angular</md-button>
-
-  <section flex layout="row" layout-align="left center">
-    <md-button href="#" class="md-raised">Home</md-button>
-    <md-button href="#" class="md-raised">About</md-button>
-    <md-button href="#" class="md-raised">Contact</md-button>
-  </section>
-
-  <md-button class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</md-button>
-
+<md-toolbar layout="row">
+  <div class="button-menu">
+    <md-button class="menu" hide-gt-lg ng-click="vm.toggleList()" aria-label="Show User List">
+      <md-icon md-svg-icon="./assets/images/menu.svg"></md-icon>
+    </md-button>
+    <md-button ng-click="vm.goMain()" aria-label="Show Main Page">
+      Main
+    </md-button>
+  </div>
+  <div class="title-menu">
+    <h1>Angular Material - Blog</h1>
+  </div>
+  <md-button ng-if="!vm.isLogin" class="sign-up" ng-click="vm.showReg($event)" aria-label="Sign up">
+    Sign up
+  </md-button>
+  <md-button ng-if="!vm.isLogin" class="sign-in" ng-click="vm.showDialog($event)" aria-label="Sign in">
+    Sign in
+  </md-button>
+  <md-button ng-if="vm.isLogin" class="sign-out" ng-click="vm.logout()" aria-label="Sign out">
+    Sign out
+  </md-button>
 </md-toolbar>
