--- a/src/app/index.less
+++ b/src/app/index.less
@@ -4,9 +4,7 @@
  */
 // bower:less
 // endbower
-
 @import url(//fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
-
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300i);
 
 @font-face {
@@ -15,17 +13,17 @@
   font-weight: 400;
   src: url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
-       url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+  local('MaterialIcons-Regular'),
+  url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
+  url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.woff) format('woff'),
+  url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px; /* Preferred icon size */
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -54,7 +52,6 @@ html {
   flex-direction: row;
 
 }
-
 
 .browsehappy {
   margin: 0.2em 0;
@@ -101,12 +98,11 @@ section.jumbotron {
 // injector
 // endinjector
 
-
 html, body {
-  font-family: "open_sansregular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size:16px;
+  font-family: "open_sansregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
 
-  height:100%;
+  height: 100%;
   margin: 0px;
   padding: 0px;
 }
@@ -115,8 +111,7 @@ html, body {
 
 md-toolbar {
   justify-content: center;
-  background: #2d313a!important;
-
+  background: #2d313a !important;
 
 }
 
@@ -126,12 +121,12 @@ md-toolbar h3 {
 }
 
 md-list-item > button {
-  width:100%;
+  width: 100%;
   //text-align:left !important;
   background: #fafbfb;
 }
 
-#content  {
+#content {
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 5px;
@@ -139,9 +134,10 @@ md-list-item > button {
   text-align: justify;
 }
 
-md-content{
-overflow: visible;
+md-content {
+  overflow: visible;
 }
+
 #content .md-button.share {
   background-color: transparent;
   border: none;
@@ -154,9 +150,9 @@ overflow: visible;
 }
 
 #content .md-button.share > md-icon {
-  fill:black;
-  width:36px;
-  height:36px;
+  fill: black;
+  width: 36px;
+  height: 36px;
 }
 
 .avatar {
@@ -169,10 +165,10 @@ overflow: visible;
   overflow: hidden;
   margin: 0px;
   vertical-align: middle;
-  zoom:0.70;
+  zoom: 0.70;
   transform: translateZ(0);
   -webkit-transform: scale(0.70);
-  -moz-transform:scale(0.70);
+  -moz-transform: scale(0.70);
 }
 
 .selected {
@@ -186,87 +182,124 @@ overflow: visible;
   margin: 16px;
   width: 36px;
 }
+
 .sign-in {
   background-color: transparent;
   border: none;
-  height: 38px!important;
-    margin:16px 32px 16px 16px!important;
-  width: 36px!important;
+  height: 38px !important;
+  margin: 16px 32px 16px 16px !important;
+  width: 36px !important;
 }
+
 .sign-up {
   background-color: transparent;
   border: none;
-  height: 38px!important;
-  margin:16px 0 16px 16px!important;
-  width: 36px!important;
+  height: 38px !important;
+  margin: 16px 0 16px 16px !important;
+  width: 36px !important;
 }
+
 .sign-out {
   background-color: transparent;
   border: none;
-  height: 38px!important;
-  margin:16px 32px 16px 16px!important;
-  width: 36px!important;
+  height: 38px !important;
+  margin: 16px 32px 16px 16px !important;
+  width: 36px !important;
 }
+
 .create-post {
   background-color: transparent;
   border: none;
-  height: 38px!important;
-  margin:16px 32px 16px 16px!important;
+  height: 38px !important;
+  margin: 16px 32px 16px 16px !important;
   //width: 36px!important;
+}
+li{
+  width: 10px;
+  margin: 0;
+  display: inline;
 }
 textarea.md-input {
   max-height: 150px;
   overflow: auto;
 }
 
-.new-line{
-  white-space: pre-line!important;
+.new-line {
+  white-space: pre-line !important;
 }
-md-list-item{
+a {
+  cursor: pointer;
+}
+
+a:hover{
+  color: white;
+}
+
+.active{
+  color:white;
+  pointer-events: none;
+}
+
+.pagination {
+  color: #6c7b94;
+  background: #3a4250;
+  text-align: center;
+  margin: 0 -64px -64px -64px;
+  border-radius: 0 0 2px 2px;
+  padding: 40px 20px;
+  font-family: "open_sanssemibold","Helvetica Neue",Helvetica,Arial,sans-serif;
+  text-transform: uppercase;
+}
+
+md-list-item {
   height: 100%;
 }
-md-list.center-height{
+
+md-list.center-height {
   height: 100%;
   width: 75%;
   margin-left: 13%;
   border-radius: 2px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 
 }
 
-
-md-list  {
-padding: 0 ;
+md-list {
+  padding: 0;
 }
+
 span.name {
   font-weight: bold;
-  font-size:1.1em;
-  padding-left:5px;
+  font-size: 1.1em;
+  padding-left: 5px;
 }
 
-#parent{
-display: flex;
+#parent {
+  display: flex;
 
 }
 
-.button-menu{
+.button-menu {
   flex-grow: 1;
 }
-.title-menu{
+
+.title-menu {
   flex-grow: 1.5;
 }
-.center-side{
+
+.center-side {
   flex-grow: 15;
   width: 80%;
   background: #fafbfb;
 }
-.right-side{
+
+.right-side {
   flex-grow: 2;
   width: 20%;
 
 }
 
-.title{
+.title {
   //font-family: "Cormorant Garamond", georgia,sans-serif;
   font-family: 'Open Sans', sans-serif;
   font-size: 40px;
@@ -274,18 +307,21 @@ display: flex;
   color: #384455;
   margin: 0 0 32px 0;
 }
-.title .post__meta{
+
+.title .post__meta {
   text-align: center;
 }
-.post__meta__divider{
+
+.post__meta__divider {
   height: 1px;
   background-color: #f3f3f3;
   width: 100%;
   margin-top: -10px;
   margin-bottom: 39px;
 }
-.post__meta{
-  text-align: center!important;
+
+.post__meta {
+  text-align: center !important;
   font-size: 16px;
   color: #b1b1b1;
   font-style: italic;
@@ -293,27 +329,31 @@ display: flex;
   background-color: white;
   padding: 0 10px;
 }
-.post-single{
+
+.post-single {
   border-bottom: 1px solid #e7e5e5;
   padding-bottom: 47px;
   margin: 48px 0;
   text-align: center;
 }
+
 .post__button {
   text-align: center;
   margin: 25px 0 0;
 }
+
 .button {
   text-decoration: none;
   display: inline-block;
-  font-family: "open_sanssemibold","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "open_sanssemibold", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   text-transform: uppercase;
   color: #b1b1b1;
-  border: 1px solid rgba(0,0,0,0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   padding: 13px 23px 13px 26px;
   border-radius: 26px;
 }
+
 .form_validation_msg {
   margin-top: 15px;
   text-align: center;
