--- a/src/app/index.less
+++ b/src/app/index.less
@@ -244,19 +244,25 @@ a:hover{
   color: #6c7b94;
   background: #3a4250;
   text-align: center;
-  margin: 0 -64px -64px -64px;
+  margin: 0 -2.5% -15% -11.5%;
   border-radius: 0 0 2px 2px;
+  //width: 119%;
   padding: 40px 20px;
-  font-family: "open_sanssemibold","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "open_sanssemibold", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
+  //margin-bottom: 0%;
+}
+.container{
+  width: 110%;
 }
 
 md-list-item {
   height: 100%;
+  //margin-top:15%;
 }
 
 md-list.center-height {
-  height: 100%;
+  height: auto;
   width: 75%;
   margin-left: 13%;
   border-radius: 2px;
@@ -290,7 +296,8 @@ span.name {
 .center-side {
   flex-grow: 15;
   width: 80%;
-  background: #fafbfb;
+  background: #f1f4f5;
+  padding-bottom: 10%;
 }
 
 .right-side {
@@ -361,4 +368,23 @@ span.name {
   line-height: 2.5em;
   font-size: 1.3em;
   font-style: italic;
+}
+.action-bar {
+  width: 75%;
+  margin-left: 13%;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.search {
+  position: relative;
+}
+.search input {
+  padding: 1%;
+  padding-right: 2%;
+  width: 97%;
+  outline: 0;
+  border: 0;
+  font-size: 1.2em;
 }
