Search field change

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -379,6 +379,7 @@ span.name {
 }
 .search {
   position: relative;
+  background-color: #fff;
 }
 .search input {
   padding: 1%;
@@ -387,4 +388,28 @@ span.name {
   outline: 0;
   border: 0;
   font-size: 1.2em;
+}
+.search ul {
+  margin: 0;
+  padding: 1%;
+  padding-right: 2%;
+  width: 97%;
+  outline: 0;
+  border: 0;
+  font-size: 1.2em;
+}
+.search ul li {
+  outline: none;
+  display: inherit;
+  width: 97%;
+  line-height: 25px;
+  cursor: pointer;
+}
+
+.search ul li:hover{
+  color: #b1b1b1;
+}
+
+[ng\:cloak], [ng-cloack], .ng-cloak{
+  display: none;
 }
