Added remove service

--- a/src/app/components/user-post-modal/user.post.modal.html
+++ b/src/app/components/user-post-modal/user.post.modal.html
@@ -34,7 +34,7 @@
       <md-button ng-click="home.editPost(home.post)">
         Edit Post
       </md-button>
-      <md-button ng-click="home.removePost(home.post)">
+      <md-button ng-click="home.removePost(home.post.id)">
         Remove Post
       </md-button>
     </md-dialog-actions>
