--- a/src/app/components/home-page/home.page.html
+++ b/src/app/components/home-page/home.page.html
@@ -12,7 +12,7 @@
       </md-button>
     </div>
     <div class="title-menu">
-      <h1>Angular Material - Blog</h1>
+      <h1>Angular - Blog</h1>
     </div>
     <div create-post></div>
     <div sign-up-button></div>
